err/p2p-grpc-blockchain.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/p2p_grpc_blockchain'...
Listing './lib/python3.5/site-packages/p2p_grpc_blockchain/block'...
Compiling './lib/python3.5/site-packages/p2p_grpc_blockchain/block/block.py'...
***   File "./lib/python3.5/site-packages/p2p_grpc_blockchain/block/block.py", line 37
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/p2p_grpc_blockchain/enum'...
Listing './lib/python3.5/site-packages/p2p_grpc_blockchain/p2p'...
Listing './lib/python3.5/site-packages/p2p_grpc_blockchain/proto'...
Listing './lib/python3.5/site-packages/p2p_grpc_blockchain/synchronization'...
Compiling './lib/python3.5/site-packages/p2p_grpc_blockchain/synchronization/synchronization.py'...
***   File "./lib/python3.5/site-packages/p2p_grpc_blockchain/synchronization/synchronization.py", line 19
    print request
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/p2p_grpc_blockchain/transaction'...
Listing './lib/python3.5/site-packages/p2p_grpc_blockchain-0.42.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
